CODETOOLS-7902515 Asmtools (code cleanup) removing unnecessary boxing, initializations